# badge2024

./: .gitignore  16-ws2812.kicad_sch  1s_lipo.kicad_sch  Cargo.toml  README.md  Trunk.toml  esp32-c3-mini.kicad_sch  flake.nix  fp-lib-table  lis2dh.kicad_sch  ntag_nfc.kicad_sch  pov_badge.kicad_pcb  pov_badge.kicad_pro  pov_badge.kicad_sch  run.sh  run_web.sh  sym-lib-table  tailwind.config.js
.cargo/: config.toml
apps/accelerometer/: Cargo.toml
apps/accelerometer/src/: main.rs
apps/diodes/: Cargo.toml
apps/diodes/src/: main.rs
apps/feature-creep/: Cargo.toml
apps/feature-creep/src/: main.rs  webserver.rs  webserver_file.rs  wifi.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
libs/bhbadge2024/: Cargo.toml
libs/bhbadge2024/src/: lib.rs  shared_i2c.rs  ws2812b.rs
libs/bhbadge2024/src/lis2dh12/: mod.rs
libs/feature-creep-types/: Cargo.toml
libs/feature-creep-types/src/: lib.rs
