[package]
name = "feature-creep"
version = "0.1.0"
edition = "2021"

[dependencies]
bhbadge2024.path = "../../libs/bhbadge2024"
feature-creep-types.path = "../../libs/feature-creep-types"
esp-hal-embassy = "0.1.0"
esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-println = "0.9.1"
esp-wifi = { version = "0.6.0", features = [
    "esp32c3",
    "async",
    "wifi",
    "dhcpv4",
    "embassy-net",
] }
static_cell = "2.1.0"
embassy-net = { version = "0.4.0", features = ["proto-ipv4", "dhcpv4", "tcp"] }
picoserve = { version = "0.11.1", features = ["embassy"] }
serde-json-core = "0.5.1"
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
