[package]
name = "bhbadge2024"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
accelerometer = "0.12.0"
esp-backtrace = { version = "0.12.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.6.0", features = [
    "esp32c3",
    "async",
    "wifi",
    "dhcpv4",
    "embassy-net",
] }
embassy-executor = "0.5.0"
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
static_cell = "2.1.0"
cast = "0.3.0"
num-traits = { version = "0.2.19", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
micromath = "2.1.0"

[features]
default = ["out_f32"]
out_f32 = []
